# trafella

./: .gitignore  README.md  note.txt  package-lock.json  package.json  vercel.json
.document/ops/: grafana-agent.md
.document/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.document/specs/2025-08-04-ai-powered-itinerary-generator/: spec-lite.md  spec.md  tasks.md
.github/PULL_REQUEST_TEMPLATE/: phase2-planner-m1.md
.github/workflows/: ci.yml
.windsurf/rules/: best-practices.md  code-style.md  tech-stack.md
.windsurf/workflows/: create-spec.md  create-tasks.md  execute-task.md  execute-tasks.md  plan-product.md
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
api/: README.md  pyproject.toml
api/app/: main.py
api/tests/: test_itinerary.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/prompts/: itinerary_v1.txt
backend/app/routers/: itinerary.py
backend/app/schemas/: itinerary.py
backend/app/services/ai/: generator.py  llm_client.py
frontend/: .env  .env.example  README.md  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/test-results/: .last-run.json
frontend/tests/: setup.ts
prisma/: schema.prisma  seed.js
src/: server.js
src/routes/: itinerary.js
src/services/: itineraryService.js
tests/: itinerary.e2e.test.js  poi.test.js
(+44 files in other folders)
